--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,13 @@ body {
     text-align: center;
 }
 
+.sideBar {
+    width: 500px;
+}
+
+.textContainer {
+    border: 2px solid #000000;
+    border-radius: 10px;
+    padding: 10px;
+}
+
