--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,14 @@ body {
     border: 2px solid #000000;
     border-radius: 10px;
     padding: 10px;
+    margin: 5px;
+}
+
+.floatContainer {
+    overflow: auto;
+}
+
+.float {
+    float: left;
 }
 
