--- a/systemViewerStyles.css
+++ b/systemViewerStyles.css
@@ -26,10 +26,10 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 1em;
-    height: 1em;
-    margin-top: -0.5em;
-    margin-left: -0.5em;
+    width: 1rem;
+    height: 1rem;
+    margin-top: -0.5rem;
+    margin-left: -0.5rem;
     border-radius: 50%;
     transform-style: preserve-3d;
 }
@@ -66,10 +66,10 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     transform-style: preserve-3d;
-    width: 12em;
-    height: 12em;
-    margin-top: -6em;
-    margin-left: -6em;
+    width: 12rem;
+    height: 12rem;
+    margin-top: -6rem;
+    margin-left: -6rem;
 }
 
 
@@ -95,22 +95,22 @@
 
 
 /* Planet sizes */
-#star {
-    font-size: 10em;
-}
-#mercury {
-    font-size: 1em;
-}
+/*#star {*/
+/*    font-size: 10rem;*/
+/*}*/
+/*#mercury {*/
+/*    font-size: 1rem;*/
+/*}*/
 
-#venus {
-    font-size: 7rem;
-}
+/*#venus {*/
+/*    font-size: 7rem;*/
+/*}*/
 
 
-#mercury > .pos > .planet {
-    font-size: 1em;
-}
+/*#mercury > .pos > .planet {*/
+/*    font-size: 1rem;*/
+/*}*/
 
-#venus > .pos > .planet {
-    font-size: 0.2em;
-}
+/*#venus > .pos > .planet {*/
+/*    font-size: 0.2rem;*/
+/*}*/
