--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     text-align: center;
     background-color:  #0C1423;
     color: #257DAC;
-    font-family: monospace;
+    font-family: 'VT323', monospace;
 }
 
 .sideBar {
