--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,15 @@ body {
 #systemViewer {
     margin-top: 10px;
 }
+
+#systemViewer > h1 {
+    font-size: 8rem;
+    padding-top: 80px;
+    margin-bottom: 20px;
+    text-shadow: 0 0 10px #257DAC;
+
+}
+
+#systemViewer > p {
+    font-size: 2rem;
+}
