--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
 
 .container {
     border: 2px solid #257DAC;
+    box-shadow: 0 0 8px 0 #0A51AC, inset 0 0 8px 0 #0A51AC;
     border-radius: 10px;
     margin: 5px;
 }
@@ -40,9 +41,8 @@ body {
 #systemViewer > h1 {
     font-size: 8rem;
     padding-top: 80px;
-    margin-bottom: 20px;
-    text-shadow: 0 0 10px #257DAC;
-
+    margin-bottom: 30px;
+    text-shadow: 0 0 15px #0A51AC;
 }
 
 #systemViewer > p {
