--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,30 @@ body {
     background-color:  #0C1423;
     color: #257DAC;
     font-family: 'VT323', monospace;
+    padding: 0 20px;
+}
+
+h2 {
+
+}
+
+.button {
+    font-size: 2rem;
+    border-radius: 5px;
+    margin: 15px auto;
+    padding: 10px;
+    border: 2px solid #257DAC;
+    box-shadow: 0 0 8px 0 #0A51AC, inset 0 0 8px 0 #0A51AC;
+    animation: pulse 2s infinite;
+    transition: 1s;
+    width: 300px;
+}
+
+.button:hover {
+    animation: none;
+    background-color: #257DAC;
+    color: #0C1423;
+    cursor: pointer;
 }
 
 .sideBar {
@@ -47,4 +71,19 @@ body {
 
 #systemViewer > p {
     font-size: 2rem;
+}
+
+@keyframes pulse {
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(37,125,172, 0.8);
+        box-shadow: 0 0 0 0 rgba(37,125,172, 0.8);
+    }
+    70% {
+        -moz-box-shadow: 0 0 0 20px rgba(37,125,172, 0);
+        box-shadow: 0 0 0 20px rgba(37,125,172, 0);
+    }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(37,125,172, 0);
+        box-shadow: 0 0 0 0 rgba(37,125,172, 0);
+    }
 }
