--- a/systemViewerStyles.css
+++ b/systemViewerStyles.css
@@ -3,7 +3,7 @@
     height: 600px;
     overflow: hidden;
     background-color: #000000;
-    background-image: url("img/stars.png");
+    background-image: url("img/stars.jpg");
     background-size: auto;
     font-size: 11px;
 }
